k8s/cache-service/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cache-service
  labels:
    name: cache-service
