k8s/cache-service/k8s/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-service-lb
  namespace: cache-service
  labels:
    app: cache-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: grpc
  selector:
    app: cache-service
