k8s/cache-service/k8s/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-service-nodeport
  namespace: cache-service
  labels:
    app: cache-service
spec:
  type: NodePort
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30080
    protocol: TCP
    name: http
  - port: 9000
    targetPort: 9000
    nodePort: 30090
    protocol: TCP
    name: grpc
  selector:
    app: cache-service
