k8s/cache-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache-service
  namespace: cache-service
  labels:
    app: cache-service
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  - port: 9000
    targetPort: 9000
    protocol: TCP
    name: grpc
  selector:
    app: cache-service
